addressed comments