@@ -1,7 +1,6 @@
 package com.epam.aidial.cfg.domain.service;
 
 import com.epam.aidial.cfg.client.ToolsClient;
-import com.epam.aidial.cfg.configuration.LocalizationProperties;
 import com.epam.aidial.cfg.configuration.logging.LogExecution;
 import com.epam.aidial.cfg.dao.jpa.ApplicationJpaRepository;
 import com.epam.aidial.cfg.dao.jpa.ApplicationTypeSchemaJpaRepository;
@@ -14,9 +13,9 @@ import com.epam.aidial.cfg.dao.model.ApplicationTypeSchemaEntity;
 import com.epam.aidial.cfg.dao.model.InterceptorEntity;
 import com.epam.aidial.cfg.dao.model.RoleEntity;
 import com.epam.aidial.cfg.domain.model.Application;
-import com.epam.aidial.cfg.domain.model.ApplicationComparator;
 import com.epam.aidial.cfg.domain.model.Deployment;
 import com.epam.aidial.cfg.domain.model.DomainObjectWithHash;
+import com.epam.aidial.cfg.domain.model.LocalizedValue;
 import com.epam.aidial.cfg.domain.model.RoleBased;
 import com.epam.aidial.cfg.domain.model.RoleLimit;
 import com.epam.aidial.cfg.domain.model.ToolSet;
@@ -28,7 +27,7 @@ import com.epam.aidial.cfg.domain.util.ContainerEndpointResolver;
 import com.epam.aidial.cfg.domain.util.ContainerSourceChangeDetector;
 import com.epam.aidial.cfg.domain.utils.CoreClientUrlUtils;
 import com.epam.aidial.cfg.domain.validator.ApplicationValidator;
-import com.epam.aidial.cfg.exception.EntityAlreadyExistsException;
+import com.epam.aidial.cfg.domain.validator.DisplayNameUniquenessValidator;
 import com.epam.aidial.cfg.exception.EntityNotFoundException;
 import com.epam.aidial.cfg.exception.OptimisticLockConflictException;
 import com.epam.aidial.cfg.service.hashing.HashCalculator;
@@ -50,7 +49,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -80,8 +79,7 @@ public class ApplicationService {
     private final ContainerEndpointResolver endpointResolver;
     private final ApplicationRefreshService applicationRefreshService;
     private final ToolsClient toolsClient;
-    private final LocalizationProperties localizationProperties;
-    private final ApplicationComparator applicationComparator;
+    private final DisplayNameUniquenessValidator displayNameUniquenessValidator;
 
     @Transactional(readOnly = true)
     public Collection<Application> getAllApplications() {
@@ -99,18 +97,16 @@ public class ApplicationService {
 
     @Transactional(readOnly = true)
     public List<Application> getAllApplicationsOrderedByDisplayNameAscDisplayVersionAscNameAsc() {
-        return applicationJpaRepository.findAll().stream()
+        return applicationJpaRepository.findAllByOrderByDisplayNameAscDisplayVersionAscIdAsc().stream()
                 .map(mapper::toDomain)
-                .sorted(applicationComparator)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     public List<Application> getAllValidApplicationsOrderedByDisplayNameAscDisplayVersionAscNameAsc() {
-        return applicationJpaRepository.findAllByValidityStateIsValidTrue().stream()
+        return applicationJpaRepository.findByValidityStateIsValidTrueOrderByDisplayNameAscDisplayVersionAscIdAsc().stream()
                 .map(mapper::toDomain)
-                .sorted(applicationComparator)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -118,9 +114,8 @@ public class ApplicationService {
         if (CollectionUtils.isEmpty(names)) {
             return Collections.emptyList();
         }
-        return applicationJpaRepository.findByIdIn(names).stream()
+        return applicationJpaRepository.findByIdInOrderByDisplayNameAscDisplayVersionAscIdAsc(names).stream()
                 .map(mapper::toDomain)
-                .sorted(applicationComparator)
                 .collect(Collectors.toList());
     }
 
@@ -149,9 +144,7 @@ public class ApplicationService {
         applicationValidator.validateCreation(application);
         deploymentService.assertDeploymentNotExists(application.getDeployment().getName());
         deploymentService.assertInterceptorNotExists(application.getDeployment().getName());
-        String displayName = application.getDisplayName() != null ? application.getDisplayName().resolve(null, localizationProperties.getLocale()) : null;
-        String displayVersion = application.getDisplayVersion();
-        assertNotExists(displayName, displayVersion);
+        assertDisplayNameAndDisplayVersionUnique(null, application);
         resolveEndpointsIfContainerSource(application);
         Optional.of(application)
                 .map(domainModel -> toEntity(domainModel, new ApplicationEntity()))
@@ -180,7 +173,7 @@ public class ApplicationService {
         var applicationEntity = applicationJpaRepository.findById(applicationName)
                 .orElseThrow(() -> new EntityNotFoundException(NOT_FOUND_MESSAGE_TEMPLATE.formatted(applicationName)));
 
-        assertNewApplicationDisplayNameAndDisplayVersion(applicationEntity, application);
+        assertDisplayNameAndDisplayVersionUnique(applicationEntity.getDeploymentName(), application);
         assertNotConcurrencyOverwrite(applicationEntity, hash);
         resolveEndpointsIfContainerSource(application, applicationEntity);
         return save(toEntity(application, applicationEntity));
@@ -354,28 +347,13 @@ public class ApplicationService {
         }
     }
 
-    private void assertNotExists(String displayName, String displayVersion) {
-        if ((displayName != null || displayVersion != null) && applicationJpaRepository
-                .findByDisplayVersion(displayVersion)
-                .stream()
+    private void assertDisplayNameAndDisplayVersionUnique(String currentApplicationName, Application application) {
+        Map<String, LocalizedValue> candidates = applicationJpaRepository.findByDisplayVersion(application.getDisplayVersion()).stream()
                 .map(mapper::toDomain)
-                .anyMatch(application ->
-                        Objects.equals(
-                                application.getDisplayName().resolve(null, localizationProperties.getLocale()),
-                                displayName))) {
-            throw new EntityAlreadyExistsException("Application with display name: '" + displayName + "' and display version: '" + displayVersion + "' already exists");
-        }
-    }
-
-    private void assertNewApplicationDisplayNameAndDisplayVersion(ApplicationEntity entity, Application domain) {
-        String displayName = entity.getDisplayName();
-        String displayVersion = entity.getDisplayVersion();
-        String newDisplayName = domain.getDisplayName() != null ? domain.getDisplayName().resolve(null, localizationProperties.getLocale()) : null;
-        String newDisplayVersion = domain.getDisplayVersion();
-
-        if (!Objects.equals(displayName, newDisplayName) || !Objects.equals(displayVersion, newDisplayVersion)) {
-            assertNotExists(newDisplayName, newDisplayVersion);
-        }
+                .filter(a -> a.getDisplayName() != null)
+                .collect(Collectors.toMap(a -> a.getDeployment().getName(), Application::getDisplayName));
+        displayNameUniquenessValidator.validateUnique("Application", currentApplicationName,
+                application.getDisplayName(), application.getDisplayVersion(), candidates);
     }
 
     private ApplicationEntity toEntity(Application domain, ApplicationEntity entity) {
